2005-12-07  Michael Schumacher  <schumaml@cvs.gnome.org>

	* app/paint/gimpclone.c
	* app/paint/paint-enums.c
	* app/paint/paint-enums.h: added alignment mode for cloning from a
	fixed location source as suggested in bug #322791. 

2005-12-06  Manish Singh  <yosh@gimp.org>

	* autogen.sh: Allow overriding from shell environment variables,
	and prefer any overrid automakes to the default, so long as the
	version is new enough.

2005-12-06  Sven Neumann  <sven@gimp.org>

	* autogen.sh: applied a patch provided by Pierre-Paul Lavoie that
	makes it easier to adapt autogen.sh to uncommon executable names
	(bug #323341).

2005-12-06  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_destroy):
	initialize all fields of the struct passed to gimp_set_data().

2005-12-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/edge.c: corrected the algorithm name as
	suggested in bug #323304.

2005-12-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c: applied a modified version of a patch
	by Joao S. O. Bueno Calligaris that makes the IWarp preview
	resizable (bug #323177).

2005-12-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mkgen.pl
	* plug-ins/faxg3/Makefile.am
	* plug-ins/help/Makefile.am
	* plug-ins/metadata/Makefile.am: workaround for libtool brokeness
	on Linux (bug #314513 and bug #323085)

	* plug-ins/common/Makefile.am: regenerated.

2005-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): added
	"-v" to the wget command-line options. Fixes bug #322977.

2005-11-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): timeout
	message format string should use %d, not %s.

2005-11-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/screenshot.c: can't use gtk_main_quit as a
	timeout function, since it doesn't return a value. Wrap it in a
	function that returns FALSE instead. Fixes bug #322343.
