@@ -1,3 +1,8 @@
+2005-12-07  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimphelpui.c: allow to cancel context sensitive
+	help by pressing escape.
+
 2005-12-07  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* app/paint/gimpclone.c
